--- a/css/task8/task2.html
+++ b/css/task8/task2.html
@@ -36,18 +36,14 @@
             <!-- 导航栏开始-->
             <div class=dhl>
                 <div class="dhl1">
-                    <img src="./img/wz.png">
+                    <img class="to" src="./img/wz.png">
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-
                 </div>
-
-
-
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
@@ -88,9 +84,6 @@
                 <span><strong>合作企业</strong></span>
                   </div>
                 <div class="lb1">
-
-
-                   
 
                     <div class="select">   
                         <i  class="circle"></i>
