--- a/css/task10/task10.html
+++ b/css/task10/task10.html
@@ -146,7 +146,7 @@
                                          </div>
                                 </div>
                             
-                                <div class="form">
+                                <div class="form hh">
                                    <select>
                                    <option value="1">查看详情</option>
                                    <option value="2">先有的鸡</option>
@@ -156,7 +156,7 @@
                           </div>
                             </div>
 
-                            <div class="r2"><!-- 第五行  -->
+                            <div class="r2 ls"><!-- 第五行  -->
                                    <div class="up">
                                       <div class="xz lo">
                                              <input type="radio" id="a2" name="1">
@@ -176,7 +176,7 @@
                                             </div>
                                    </div>
                                
-                                   <div class="form">
+                                   <div class="form hh">
                                       <select>
                                       <option value="1">查看详情</option>
                                       <option value="2">先有的鸡</option>
