--- a/css/task10/task10.html
+++ b/css/task10/task10.html
@@ -268,11 +268,11 @@
        </div> <!-- 页尾内容区结束  -->
 
 
-       <div class="row" style="background: #1d7ad9;">
-              <div class="col-a-12 col-b-12 col-c-12 col-d-12  col-e-12 col-f-12 over">
+       <div class="row over" style="background: #1d7ad9;">
+            
                      <span>北京五一包装科技有限公司Copyright&nbsp;@2015&nbsp;&nbsp;51baozhuang.com015&nbsp;All&nbsp;rights&nbsp;reserved.&nbsp;京icp备99999999-1</span>
               </div>
-       </div>
+       
        </div><!-- 大盒子结束  -->
 </body>
 
