--- a/css/task12/task12-a.html
+++ b/css/task12/task12-a.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="task12.css" rel="stylesheet" type="text/css">
+    <link href="task-12-a.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 
@@ -15,23 +15,27 @@
         <span>个人主页</span>
     </div>
 
-    <div class="background">
-        <!--中间模块背景图设置-->
+    <div class="box">
+        <img class="background" src="./img/background.png">
+        <div class="block">
 
-        <img class="picture" src="./img/picture.png">
+            <div class="picture">
+                <img src="./img/picture.png">
+            </div>
 
-        <div class="name">
-            <span>蔡徐坤</span>
-            <span>88岁</span>
+            <div class="block-1">
+                <div class="name">
+                    <span>蔡徐坤</span>
+                    <span>88岁</span>
+                </div>
+                <div class="location">
+                    <img src="./img/location.png">
+                    <span>北京.通州.果园</span>
+                </div>
+            </div>
         </div>
-
-
-        <div class="location">
-            <img src="./img/location.png">
-            <span>北京.通州.果园</span>
-        </div>
-
     </div>
+
 
     <div class="skill">
         <i class="blue"></i>
@@ -69,17 +73,17 @@
 
 
         <div class="content-3">
-            <span class="font-1">自我介绍</span>
-            <i class="string-1"></i>
+                <span class="font-1">自我介绍</span>
+                <i class="string-1"></i>
             <span class="font-2">喜欢唱、跳、rap、篮球，魔法少女坤坤</span>
         </div>
+ 
 
 
-
-        <div class="footer">
-            <input class="button-1" type="button" value="留言">
-            <input class="button-2" type="button" value="电话联系">
-        </div>
+<div class="footer">
+<input class="button-1" type="button" value="留言">
+<input class="button-2" type="button" value="电话联系">
+</div>
 
 
 
