--- a/css/task11/task11.html
+++ b/css/task11/task11.html
@@ -33,7 +33,7 @@
             <input type="text" placeholder="请输入密码" id="click1">
         </div>
         <div class="enter">
-            <a href="https://zhuchunyu1995.github.io/xzy/css/task5/task5.html"><input type="button" value="登&nbsp;录" class="but"></a>
+            <a href="https://zhuchunyu1995.github.io/xzy/css/task5/task5.html">登&nbsp;录</a>
         </div>
         <span class="hint">忘记密码?</span>
 
