--- a/css/task13/task13-1.html
+++ b/css/task13/task13-1.html
@@ -199,7 +199,7 @@
 
         <div class="footer">
             <!--页尾 固定定位-->
-            <a href=" https://zhuchunyu1995.github.io/xzy/css/task7/task3.html">
+            <a href=" https://zhuchunyu1995.github.io/xzy/css/task13/task13-2.html">
                 <button type="button" class="button" type="submit">投死</button>
             </a>
         </div>
