--- a/css/task11/task11.html
+++ b/css/task11/task11.html
@@ -13,9 +13,9 @@
     <div class="box">
         <div class="header">
             <div class="block">
-                <a href="https://zhuchunyu1995.github.io/xzy/css/task7/task3.html"><span>关闭</span></a>
+                <a href="https://zhuchunyu1995.github.io/xzy/css/task12/task12-1.html"><span>关闭</span></a>
                 <span class="magnify">登录</span>
-                <a href="https://zhuchunyu1995.github.io/xzy/css/task7/task2.html"><span>注册</span></a>
+                <a href="https://zhuchunyu1995.github.io/xzy/css/task13/task13-3.html"><span>注册</span></a>
             </div>
         </div>
 
@@ -33,7 +33,7 @@
             <input type="text" placeholder="请输入密码" id="click1">
         </div>
         <div class="enter">
-            <a href="https://zhuchunyu1995.github.io/xzy/css/task5/task5.html">登&nbsp;录</a>
+            <a href="https://zhuchunyu1995.github.io/xzy/css/task12/task12-a.html">登&nbsp;录</a>
         </div>
         <span class="hint">忘记密码?</span>
 
