--- a/css/task13/task13-3.html
+++ b/css/task13/task13-3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="http://at.alicdn.com/t/font_1499726_u1xlqtwz7vs.css" rel="stylesheet" type="text/css">
+    <link href="https://at.alicdn.com/t/font_1499726_u1xlqtwz7vs.css" rel="stylesheet" type="text/css">
     <link href="task13-3.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
@@ -48,7 +48,11 @@
                     </div>
                     <div class="list-1">
                         <div class="left">
+
                             <i class="iconfont icon-guanyu  lo"></i>
+
+
+                            
                             <span class="text">关于</span>
                         </div>
                         <span class="text-1">></span>
@@ -64,7 +68,7 @@
             <div class="block-1">
                 <img src="./img/click.png" style="opacity: 0;">
                 <span>上次游戏：捉鬼猜谜版</span>
-                <img src="./img/click.png">
+                <a href="https://zhuchunyu1995.github.io/xzy/css/task13/task13-1.html"> <img src="./img/click.png"></a>
             </div>
 
             <div class="box-2">
@@ -73,17 +77,17 @@
                 </div>
 
                 <div class="box-3">
-                    <div class="block-3">简化版</div>
+                    <div class="block-3"><a href="https://zhuchunyu1995.github.io/xzy/css/task13/task13-1.html">简化版</a></div>
                     <span>有1133个用户正在玩此款游戏</span>
 
 
                     <div class="box-4">
-                        <div class="block-4">猜词版</div>
-                        <img src="./img/arrow.png">
+                        <div class="block-4"><a href="https://zhuchunyu1995.github.io/xzy/css/task13/task13-1.html">猜词版</a></div>
+                        <a href="https://zhuchunyu1995.github.io/xzy/css/task13/task13-1.html"><img src="./img/arrow.png"></a>
                     </div>
                     <span>有1133个用户正在玩此款游戏</span>
 
-                    <div class="block-3">白痴版</div>
+                    <div class="block-3"><a href="https://zhuchunyu1995.github.io/xzy/css/task13/task13-1.html">白痴版</a></div>
                     <span>有1133个用户正在玩此款游戏</span>
                 </div>
 
