--- a/css/task12/task12.html
+++ b/css/task12/task12.html
@@ -77,8 +77,8 @@
 
 
         <div class="footer">
-            <input class="button-1" type="button" value="留言">
-            <input class="button-2" type="button" value="电话联系">
+            <input class="button-1" type="button" value="留言" onclick="location.href='https://zhuchunyu1995.github.io/xzy/css/task13/task13-3.html'">
+            <input class="button-2" type="button" value="电话联系" onclick="location.href='https://zhuchunyu1995.github.io/xzy/css/task13/task13-3.html'">
         </div>
 
 
