--- a/css/task13/task13-2.html
+++ b/css/task13/task13-2.html
@@ -73,8 +73,8 @@
                 </div>
 
         <div class="footer">
-       <input class="button-1" type="button"  value="再来一局">
-       <input class="button-2" type="button"  value="上传并分享">
+       <input class="button-1" type="button"  value="再来一局" onclick="location.href='https://zhuchunyu1995.github.io/xzy/css/task13/task13-3.html'" >
+       <input class="button-2" type="button"  value="上传并分享" onclick="location.href='https://zhuchunyu1995.github.io/xzy/css/task13/task13-3.html'" >
 
         </div>
 
