--- a/css/task12/task12-1.html
+++ b/css/task12/task12-1.html
@@ -177,14 +177,14 @@
 <div class="footer-1">
 <div class="home">
     <img src="./img/home.png">
-    <span>首页</span>
+    <span><a href="https://zhuchunyu1995.github.io/xzy/css/task12/task12.html">首页</a></span>
 </div>
 <div class="circle">
         <img src="./img/write.png">
 </div>
 <div class="my">
     <img src="./img/my.png">
-    <span>我的</span>
+    <span><a href="https://zhuchunyu1995.github.io/xzy/css/task12/task12-a.html">我的</a></span>
 </div>
 
 </div>
