--- a/css/task12/task12-a.html
+++ b/css/task12/task12-a.html
@@ -75,7 +75,7 @@
         <div class="content-3">
                 <span class="font-1">自我介绍</span>
                 <i class="string-1"></i>
-            <span class="font-2">喜欢唱、跳、rap、篮球，魔法少女坤坤</span>
+            <span class="font-2 hg">喜欢唱、跳、rap、篮球，魔法少女坤坤</span>
         </div>
  
 
