--- a/css/task13/task13-3.html
+++ b/css/task13/task13-3.html
@@ -11,12 +11,18 @@
 </head>
 
 <body>
-    <div class="box">
+   
+    <div class="box" >
         <div class="header">
+               <img class="select" src="./img/list.png">
+            </div>
 
-            <div class="pog">
-                <img class="select" src="./img/list.png">
-                <div class="list">
+      <div class="pop">
+
+            <label class="an" for="t1"></label>
+            <input type="checkbox" id="t1">
+
+            <div class="list">
                     <div class="list-1">
                         <div class="left">
                             <div class="notice">
@@ -26,7 +32,7 @@
                         </div>
                         <span class="text-1">></span>
                     </div>
-
+    
                     <div class="list-1">
                         <div class="left">
                             <div class="notice">
@@ -45,23 +51,15 @@
                     </div>
                     <div class="list-1">
                         <div class="left">
-
                             <i class="iconfont icon-guanyu  lo"></i>
-
-
-                            
                             <span class="text">关于</span>
                         </div>
                         <span class="text-1">></span>
                     </div>
                 </div>
-            </div>
-
-        </div>
-
-
 
         <div class="box-1">
+ 
             <div class="block-1">
                 <img src="./img/click.png" style="opacity: 0;">
                 <span>上次游戏：捉鬼猜谜版</span>
@@ -97,7 +95,8 @@
             </div>
         </div>
     </div>
-
+</div>
 </body>
 
 </html>
+
