--- a/css/task14/task14-1.html
+++ b/css/task14/task14-1.html
@@ -14,8 +14,8 @@
   <div class="nav">  <!--导航栏开始-->
    <div class="nav-navigation">  
     <div><img class="logo" src="./img/logo-1.png"></div>
+    <button type="button" class="button"><i class="iconfont icon-shouqianniuicon"></i></button>
 
-  <button type="button" class="button"><i class="iconfont icon-shouqianniuicon"></i></button>
 
 
 
@@ -36,13 +36,45 @@
    </div>
   </div>  <!--导航栏结束-->
 
- <div class="box"></div>
+<div class="box">
+  <input type="checkbox" id="t1">
+  <label class="an" for="t1"></label>
+  <div class="content">  <!--这个盒子是最大的-->
+ 
+<div style="height: 200px;background: aqua;font-size: 100px;display: flex;justify-content: center;align-items: center;">轮播图</div>
 
 
 
-  
 
 
 
+<div class="footer">
+    <div class="footer-box">
+    <div class="contact">
+    <p>技能树——改变你我</p>
+    <p>关于我们&nbsp;|&nbsp;联系我们&nbsp;|&nbsp;友情链接</p>
+    </div>
+    <div class="subordinate">
+      <p>旗下网站</p>
+      <div class="subordinate-1">
+        <div class="subordinate-2">
+       <span>草船云孵化器</span>
+       <span>葡萄藤轻游戏</span>
+        </div>
+        <div class="subordinate-2">
+            <span>最强IT训练营</span>
+            <span>桌游精灵</span>
+             </div>
+      </div>
+    </div>
+   <div class="wx">
+<span>微信公众平台</span>
+<img src="./img/wx.png">
+   </div>
+  </div>
+<div class="footer-end">
+  <span>Copyright&nbsp;@&nbsp;2015技能树&nbsp;www.jnshu.com&nbsp;All&nbsp;Rights&nbsp;Reserved&nbsp;|&nbsp;京ICP备13005880号</span>
+</div>
+</div>
 </body>
 </html>
