--- a/css/task14/html/task14-1.html
+++ b/css/task14/html/task14-1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://at.alicdn.com/t/font_1499726_j3yqsvqc8x.css" rel="stylesheet" type="text/css">
-    <link href="task14-1.css" rel="stylesheet" type="text/css">
+    <link href="../css/task14-1.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 
@@ -14,13 +14,13 @@
     <div style="background:#fafafa;padding-bottom: 1%;">
         <div class="header">
             <span>客服热线：010-594-78634</span>
-            <img src="./img/logo.png">
+            <img src="../img/logo.png">
         </div>
 
         <div class="nav">
             <div class="nav-width">
                 <div class="nav-img">
-                    <img src="./img/logo-1.png">
+                    <img src="../img/logo-1.png">
                     <button type="button" class="button"><i class="iconfont icon-shouqianniuicon"></i></button>
                 </div>
                 <div class="nav-text">
@@ -38,31 +38,31 @@
 
         <div class="banner">
             <div class="banner-box">
-                <img src="./img/1.png">
-                <img src="./img/2.png">
-                <img src="./img/3.png">
-                <img src="./img/4.png">
-                <img src="./img/1.png">
+                <img src="../img/1.png">
+                <img src="../img/2.png">
+                <img src="../img/3.png">
+                <img src="../img/4.png">
+                <img src="../img/1.png">
             </div>
         </div>
 
         <div class="logo-s">
             <div class="logo-s1">
-                <div class="logo-block"><img src="./img/rocket.png" style="width: 35px;height: 45px;"></div>
+                <div class="logo-block"><img src="../img/rocket.png" style="width: 35px;height: 45px;"></div>
                 <h5>高效</h5>
                 <span>将五到七年的成长时间，缩短到一年到三年。</span>
             </div>
 
 
             <div class="logo-s1">
-                <div class="logo-block"><img src="./img/book.png" style="width: 42px;height: 37px;"></div>
+                <div class="logo-block"><img src="../img/book.png" style="width: 42px;height: 37px;"></div>
                 <h5>规范</h5>
                 <span>标准的实战教程，不会走弯路</span>
             </div>
 
 
             <div class="logo-s1">
-                <div class="logo-block"> <img src="./img/gps.png" style="height: 40px;"></div>
+                <div class="logo-block"> <img src="../img/gps.png" style="height: 40px;"></div>
                 <h5>人脉</h5>
                 <span>同班好友，同院学长，技术大师，入学就混入职脉圈，为以后铺平道路。</span>
             </div>
@@ -71,12 +71,12 @@
                 <div class="list-2">
                 <div style="padding-left: 40px;">
                     <div>
-                        <img src="./img/tx.png">
+                        <img src="../img/tx.png">
                         <span>12400</span>
                         <p>累计在线学习人数</p>
                     </div>
                     <div>
-                        <img src="./img/tx.png">
+                        <img src="../img/tx.png">
                         <span>12400</span>
                         <p>学员已经找到满意工作</p>
                     </div>
@@ -92,14 +92,14 @@
                     <div class="circle">1</div>
                 </div>
                 <span>匹配你现在的个人情况寻找适合自己的岗位</span>
-                <div class="arrow"><img src="./img/arrow.png"></div>
+                <div class="arrow"><img src="../img/arrow.png"></div>
             </div>
             <div class="number-1">
                 <div>
                     <div class="circle">2</div>
                 </div>
                 <span>了解职业前景薪金待遇、竞争压力等</span>
-                <div class="arrow"><img src="./img/arrow.png"></div>
+                <div class="arrow"><img src="../img/arrow.png"></div>
             </div>
 
             <div class="number-1">
@@ -107,7 +107,7 @@
                     <div class="circle">3</div>
                 </div>
                 <span>掌握行业内顶级技能</span>
-                <div class="arrow"><img src="./img/arrow.png"></div>
+                <div class="arrow"><img src="../img/arrow.png"></div>
             </div>
 
             <div class="number-1">
@@ -125,14 +125,14 @@
                     <div class="circle">5</div>
                 </div>
                 <span>参考学习资源，掌握技能点，逐个完成任务</span>
-                <div class="arrow"><img src="./img/arrow.png"></div>
+                <div class="arrow"><img src="../img/arrow.png"></div>
             </div>
             <div class="number-1">
                 <div>
                     <div class="circle">6</div>
                 </div>
                 <span>加入班级，和小伙伴们互帮互助，一块学习</span>
-                <div class="arrow"><img src="./img/arrow.png"></div>
+                <div class="arrow"><img src="../img/arrow.png"></div>
             </div>
 
             <div class="number-1">
@@ -140,7 +140,7 @@
                     <div class="circle">7</div>
                 </div>
                 <span>选择导师，一路引导，加速自己成长</span>
-                <div class="arrow"><img src="./img/arrow.png"></div>
+                <div class="arrow"><img src="../img/arrow.png"></div>
             </div>
 
             <div class="number-1">
@@ -158,21 +158,21 @@
 
 
             <div class="show-banner">
-                <div><img src="./img/man.png"></div>
+                <div><img src="../img/man.png"></div>
                 <h5>技术顾问：罗大佑</h5>
                 <span>百度技术总监：互联网基础服务领域，从事虚拟主机、云服务器、域名。曾任新网高级技术经理，负责技术研发、团队管理于建设。</span>
             </div>
 
 
             <div class="show-banner">
-                <div><img src="./img/Avatar.png"></div>
+                <div><img src="../img/Avatar.png"></div>
                 <h5>技术顾问：罗大佑</h5>
                 <span>百度技术总监：互联网基础服务领域，从事虚拟主机、云服务器、域名。曾任新网高级技术经理，负责技术研发、团队管理于建设。</span>
             </div>
 
 
             <div class="show-banner">
-                <div><img src="./img/Avatar11.png"></div>
+                <div><img src="../img/Avatar11.png"></div>
                 <h5>技术顾问：罗大佑</h5>
                 <span>百度技术总监：互联网基础服务领域，从事虚拟主机、云服务器、域名。曾任新网高级技术经理，负责技术研发、团队管理于建设。</span>
             </div>
@@ -180,7 +180,7 @@
 
 
             <div class="show-banner">
-                <div><img src="./img/pic.png"></div>
+                <div><img src="../img/pic.png"></div>
                 <h5>技术顾问：罗大佑</h5>
                 <span>百度技术总监：互联网基础服务领域，从事虚拟主机、云服务器、域名。曾任新网高级技术经理，负责技术研发、团队管理于建设。</span>
             </div>
@@ -194,23 +194,23 @@
         <div class="company">
 
             <div class="company-img">
-                <div class="company-height"><img src="./img/al.png"></div>
+                <div class="company-height"><img src="../img/al.png"></div>
             </div>
 
             <div class="company-img">
-                <div class="company-height"><img src="./img/jsy.png" style="width: 46px;"></div>
+                <div class="company-height"><img src="../img/jsy.png" style="width: 46px;"></div>
             </div>
 
             <div class="company-img">
 
-                <div class="company-height"> <img src="./img/ls.png"></div>
+                <div class="company-height"> <img src="../img/ls.png"></div>
             </div>
             <div class="company-img">
-                <div class="company-height"> <img src="./img/yf.png"></div>
+                <div class="company-height"> <img src="../img/yf.png"></div>
             </div>
 
             <div class="company-img">
-                <div class="company-height"> <img src="./img/ww.png"></div>
+                <div class="company-height"> <img src="../img/ww.png"></div>
             </div>
         </div>
     </div>
