--- a/css/task14/html/task14-2.html
+++ b/css/task14/html/task14-2.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://at.alicdn.com/t/font_1499726_j3yqsvqc8x.css" rel="stylesheet" type="text/css">
-    <link href="task14-2.css" rel="stylesheet" type="text/css">
+    <link href="../css/task14-2.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="header">
         <span>客服热线：010-594-78634</span>
-        <img src="./img/logo.png">
+        <img src="../img/logo.png">
     </div>
 
     <div class="nav">
         <div class="nav-width">
             <div class="nav-img">
-                <img src="./img/logo-1.png">
+                <img src="../img/logo-1.png">
                 <button type="button" class="button"><i class="iconfont icon-shouqianniuicon"></i></button>
             </div>
 
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <img class="banner" src="./img/gg.png">
+    <img class="banner" src="../img/gg.png">
     <div class="home">首页><span>合作企业</span></div>
 
     <div class="synopsis">
@@ -77,7 +77,7 @@
             <div class="top">
                 <div class="top-1">
                     <div class="tds">
-                        <img class="img" src="./img/td.png">
+                        <img class="img" src="../img/td.png">
                     </div>
                     <span class="top-text">土豆网公司成立于1998年11月，是目前中国最大的互联网综合服务提供商之一，也是中国服务用户最多的互联网企业之一，成立10多年以来，腾讯一直秉承一切以用户价值为依归的经营理念，始终处于稳健，高速发展的状态，2004年6月16日，腾讯公司在香港联交所主板公司上市（股票代号700）。</span>
                 </div>
