--- a/css/task14/html/task14-3.html
+++ b/css/task14/html/task14-3.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://at.alicdn.com/t/font_1499726_j3yqsvqc8x.css" rel="stylesheet" type="text/css">
-    <link href="task14-3.css" rel="stylesheet" type="text/css">
+    <link href="../css/task14-3.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="header">
         <span>客服热线：010-594-78634</span>
-        <img src="./img/logo.png">
+        <img src="../img/logo.png">
     </div>
 
     <div class="nav">
         <div class="nav-width">
             <div class="nav-img">
-                <img src="./img/logo-1.png">
+                <img src="../img/logo-1.png">
                 <button type="button" class="button"><i class="iconfont icon-shouqianniuicon"></i></button>
             </div>
             <div class="nav-text">
@@ -79,16 +79,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -144,16 +144,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -208,16 +208,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -278,16 +278,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -343,16 +343,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -407,16 +407,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -472,16 +472,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -534,16 +534,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -607,16 +607,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -672,16 +672,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -736,16 +736,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -806,16 +806,16 @@
             <table>
                 <tbody>
                     <tr>
-                        <td colspan="12"><img class="tx" src="./img/cs.png">
+                        <td colspan="12"><img class="tx" src="../img/cs.png">
                             <strong>
                                 <p>Web前端工程师</p>
                             </strong>
                             <span>Web前端开发工程师，主要职责是利用（X）HTML/CSS/JavaScript/flash等各种Web技术进行产品的开发</span></td>
                     </tr>
                     <tr>
-                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="./img/star.png"></td>
-                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="./img/star.png"><img
-                                class="star" src="./img/star.png"></td>
+                        <td colspan="6"><span class="gray">门槛</span><img class="star" src="../img/star.png"></td>
+                        <td colspan="6"><span class="gray">难易程度</span><img class="star" src="../img/star.png"><img
+                                class="star" src="../img/star.png"></td>
                     </tr>
 
                     <tr>
@@ -877,7 +877,7 @@
             </div>
             <div class="wx">
                 <span>微信公众平台</span>
-                <img src="./img/wx.png">
+                <img src="../img/wx.png">
             </div>
         </div>
         <div class="footer-end">
