--- a/css/task14/html/task14-2.html
+++ b/css/task14/html/task14-2.html
@@ -130,7 +130,7 @@
         </div>
        <div class="wx">
     <span>微信公众平台</span>
-    <img src="./img/wx.png">
+    <img src="../img/wx.png">
        </div>
       </div>
     <div class="footer-end">
