--- a/css/task14/html/task14-1.html
+++ b/css/task14/html/task14-1.html
@@ -64,12 +64,12 @@
             <div class="logo-s1">
                 <div class="logo-block"> <img src="../img/gps.png" style="height: 40px;"></div>
                 <h5>人脉</h5>
-                <span>同班好友，同院学长，技术大师，入学就混入职脉圈，为以后铺平道路。</span>
+                <span class="los">同班好友，同院学长，技术大师，入学就混入职脉圈，为以后铺平道路。</span>
             </div>
 
             <div class="logo-s1 logo-s2 ">
                 <div class="list-2">
-                <div style="padding-left: 40px;">
+                <div class="list-3" style="padding-left: 40px;">
                     <div>
                         <img src="../img/tx.png">
                         <span>12400</span>
@@ -99,7 +99,7 @@
                     <div class="circle">2</div>
                 </div>
                 <span>了解职业前景薪金待遇、竞争压力等</span>
-                <div class="arrow"><img src="../img/arrow.png"></div>
+                <div class="arrow  a1"><img src="../img/arrow.png"></div>
             </div>
 
             <div class="number-1">
@@ -132,7 +132,7 @@
                     <div class="circle">6</div>
                 </div>
                 <span>加入班级，和小伙伴们互帮互助，一块学习</span>
-                <div class="arrow"><img src="../img/arrow.png"></div>
+                <div class="arrow a1"><img src="../img/arrow.png"></div>
             </div>
 
             <div class="number-1">
