--- a/css/task14/html/task14-2.html
+++ b/css/task14/html/task14-2.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <img class="banner" src="../img/gg.png">
-    <div class="home">首页><span>合作企业</span></div>
+    <div class="home">首页&nbsp;>&nbsp;<span>合作企业</span></div>
 
     <div class="synopsis">
         <div class="left">
