--- a/css/task14/html/task14-3.html
+++ b/css/task14/html/task14-3.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="headline">
-        首页><span>职业</span>
+        首页&nbsp;>&nbsp;<span>职业</span>
     </div>
 
     <div class="skip">
