--- a/css/task14/html/task14-1.html
+++ b/css/task14/html/task14-1.html
@@ -20,7 +20,7 @@
         <div class="nav">
             <div class="nav-width">
                 <div class="nav-img">
-                    <img src="../img/logo-1.png">
+                    <a href="https://zhuchunyu1995.github.io/xzy/css/task14/html/task14-1.html"> <img src="../img/logo-1.png"></a>
                     <button type="button" class="button"><i class="iconfont icon-shouqianniuicon"></i></button>
                 </div>
                 <div class="nav-text">
