--- a/css/task14/html/task14-3.html
+++ b/css/task14/html/task14-3.html
@@ -19,7 +19,7 @@
     <div class="nav">
         <div class="nav-width">
             <div class="nav-img">
-                <img src="../img/logo-1.png">
+                <a href="https://zhuchunyu1995.github.io/xzy/css/task14/html/task14-1.html"><img src="../img/logo-1.png"></a>
                 <button type="button" class="button"><i class="iconfont icon-shouqianniuicon"></i></button>
             </div>
             <div class="nav-text">
@@ -46,10 +46,10 @@
         <span>方向:</span>
         <div class="skip-width">
             <span>全部</span>
-            <span><a href="#qd" style="color: black;">前端开发</a></span>
-            <span><a href="#hd" style="color: black;">后端开发</a></span>
-            <span><a href="#yd" style="color: black;">移动开发</a></span>
-            <span><a href="#zz" style="color: black;">整站开发</a></span>
+            <span><a class="po" href="#qd" style="color: black;">前端开发</a></span>
+            <span><a class="po" href="#hd" style="color: black;">后端开发</a></span>
+            <span><a class="po" href="#yd" style="color: black;">移动开发</a></span>
+            <span><a class="po" href="#zz" style="color: black;">整站开发</a></span>
             <span>运营维护</span>
         </div>
     </div>
