--- a/css/xkt/title与h1、b与strong、i与em、img的alt与title、src与href有什么区别.html
+++ b/css/xkt/title与h1、b与strong、i与em、img的alt与title、src与href有什么区别.html
@@ -54,19 +54,19 @@
         <section style="font-size: 23px;">
                 <h3>title与h1、b与strong、i与em、img的alt与title、src与href有什么区别</h3>
             <p style="text-align: left">
-                 title:在 &lt;title&gt;和&lt;/title&gt;标签之间的文字内容是网页的标题信息，它会出现在浏览器的标题栏中。网页的 &lt;title&gt;标签用于告诉用户和搜索引擎这个网页的主要内容是什么，搜索引擎可以通过网页标题，迅速的判断出网页的主题。每个网页的内容都是不同的，每个网页都应该有一个独一无二的title。当把文档加入用户的链接列表或者收藏夹或书签列表时，标题将成为该文档链接的默认名称。<br><br>
+                 title:在 &lt;title&gt;和&lt;/title&gt;标签之间的文字内容是网页的标题信息，它会出现在浏览器的标题栏。网页的 &lt;title&gt;标签用于告诉用户和搜索引擎这个网页的主要内容是什么，搜索引擎可以通过网页标题，迅速的判断出网页的主题。每个网页的内容都是不同的，每个网页都应该有一个独一无二的title。当把网站加入用户收藏夹或书签列表时，标题将成为该文档链接的默认名称。<br><br>
                  h1:&lt;h1&gt;-&lt;h6&gt;标签被用来定义 HTML 标题,不继承父级的字体大小。h1定义重要等级最高的标题。h6定义重要等级最低的标题。<br><br>
 
-                  b和strong标签的区别: &lt;b&gt;标签和&lt;strong&gt;标签产生的效果是相同的，现在已经不再推荐使用b标签，而是推荐使用&lt;strong&gt;，
-                  后者具有更好的语义， &lt;b&gt;标签是字体外观的加粗效果。b是bold的简写，意思是粗体。而&lt;strong&gt;是指突出，重点，表示其中的内容相对来说具有更高的价值。对于SEO（搜索引擎优化）来说，用&lt;strong&gt;更容易让用户搜索到关键词，但是如果页面上有太多的&lt;strong&gt;标签，可能不利于排名。所以虽然&lt;strong&gt;标签更利于排名，但也需较少的使用。<br><br>
+                  b和strong标签的区别: &lt;b&gt;标签和&lt;strong&gt;标签产生的效果是相同的，现在不推荐使用b标签，而是推荐使用&lt;strong&gt;，
+                  &lt;b&gt;标签是字体外观的加粗效果。b是bold的简写，意思是粗体。而&lt;strong&gt;是指突出，重点，表示其中的内容具有更高的价值。对于搜索引擎优化来说，用&lt;strong&gt;更容易让用户搜索到关键词，但是如果页面上有太多的&lt;strong&gt;标签，可能不利于排名。虽然&lt;strong&gt;标签更利于排名，但也需较少的使用。<br><br>
 
-                  i和em标签： &lt;i&gt;和&lt;em&gt;标签都是表示斜体。 &lt;i&gt;标签表示对所包含内容显示斜体文本效果。&lt;em&gt;标签中的文本表示为强调的内容，对于所有浏览器的显示效果来说，是把这段文字用斜体来显示；前者无语义，后者有语义。&lt;i&gt;也有作为小图标使用。阿里巴巴图库的一种引用方式就是用&lt;i&gt;&lt;/i&gt;引入的。<br>
+                  i和em标签： &lt;i&gt;和&lt;em&gt;标签都是表示斜体。 &lt;i&gt;标签表示对所包含内容显示斜体文本效果。&lt;em&gt;标签中的文本表示为强调的内容，对于所有浏览器的显示效果来说，是把这段文字用斜体来显示。&lt;i&gt;也有作为小图标使用。阿里巴巴图库的一种引用方式就是用&lt;i&gt;&lt;/i&gt;引入的。<br>
             </p>
         </section>
         <section section style="font-size: 23px;">
                 <p style="text-align: left">
                   img中的alt与title属性区别:"alt"属性是图片因为某种原因不能加载时在页面显示的提示信息，它会直接输出在原本加载图片的地方，"title"属性是鼠标悬停在该图片上时显示一个小提示，鼠标离开就没有了。<br><br>
-                  src与href的区别:“href” 表示超文本引用（hypertext reference），在 link和a 等元素上使用。src 表示来源地址，在 img、script、iframe 等元素上。src 的内容，是页面必不可少的一部分，是引入。href 的内容，是与该页面有关联，是引用。区别就是，引入和引用。
+                  src与href的区别:“href” 表示超文本引用，在 link和a 等元素上使用。src 表示来源地址，在 img、script、等元素上。src 的内容，是页面必不可少的一部分，是引入。href 的内容，是与该页面有关联，是引用。区别就是，引入和引用。
                 </p>
          </section>
 
@@ -93,16 +93,6 @@
          
         </section>
         <section>
-            <p style="text-align: center">src与href的区别</p>
-          <p style="font-size: 24px; text-align: left;">
-            src是引入,一般引入图片。href是引用。区别就是，引入和引用。<br>
-            src指向的内容会嵌入到文档中当前标签所在的位置。<br><br>
-            &lt;script src="script.js"&gt;&lt;/script&gt; 引入JS文件<br>
-            &lt;img src="test.png"&gt; 引入test.png图片<br><br>
-            &lt;link href="test.css" rel="stylesheet"&gt; 浏览器会识别该文档为css文档，下载该文档，并且不会停止对当前文档的处理。这也是建议使用link，而不采用@import加载css的原因。
-        </p>
-        </section>
-        <section>
                 <p>CSS权重</p>
                 <p style="font-size: 24px; text-align: left;">
                         CSS权重指的是样式的优先级，有两条或多条样式作用于一个元素，权重高的那条样式对元素起作用,权重相同的，后写的样式会覆盖前面写的样式。
@@ -114,16 +104,16 @@
 
             <p style="font-size: 24px; text-align: left;">可以把样式的应用方式分为几个等级，按照等级来计算权重<br>
                 1、!important，加在样式属性值后，权重值为 10000<br>
-                2、内联样式，如：style=””，权重值为1000<br>
-                3、ID选择器，如：#content，权重值为100<br>
-                4、类，伪类和属性选择器，如： content、:hover 权重值为10<br>
+                2、内联样式，style=""，权重值为1000<br>
+                3、ID选择器，#，权重值为100<br>
+                4、类，伪类和属性选择器，如：:hover 权重值为10<br>
                 5、标签选择器和伪元素选择器，如：div、p、:before 权重值为1<br>
                 6、通用选择器（*）、子选择器（>）、相邻选择器（+）、同胞选择器（~）、权重值为0<br>
             </p>
             <p style="font-size: 24px; text-align: left;">
             注意：id=100并不是指id的一个权重值就是100，实际上这个100是一个进制数，不是2进制，也不是10进制；而是256进制，就是0到255后+1才是1。<br>
             
-                  例如通配符的权重值0到标签、伪元素的权重值1，中时间实际上差了255。依次类推<br>
+                  例如通配符的权重值0到标签伪元素的权重值1，中时间实际上差了255。依次类推<br>
       </p>
             </section>
         <section>
