--- a/css/xkt/bok.html
+++ b/css/xkt/bok.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
+        body {
+            margin: 0 auto;
+        }
         #wrap {
             width: 100vmin;
             height: 100vmin;
