--- a/JS/任务一/task-1.html
+++ b/JS/任务一/task-1.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./scaa/task-1.css" rel="stylesheet" type="text/css">
-    <title>Document</title>
+    <title>九宫格</title>
 </head>
+
 <body>
-    <div id="wrap">
-     <div class="block"></div>
-     <div class="block"></div>
-     <div class="block"></div>
-     <div class="block"></div>
-     <div class="block"></div>
-     <div class="block"></div>
-     <div class="block"></div>
-     <div class="block"></div>
-     <div class="block"></div>
-     <button  id="an">开始闪</button>
-     <button  id="ans">结束闪</button>
+    <div class="wrap">
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <button onclick="start()">开始闪</button>
+        <button onclick="stop()">结束闪</button>
     </div>
-  
+
     <script type="text/javascript" src="./JS/task-1.js"></script>
 </body>
 </html>
