--- a/JS/task1/task-1.html
+++ b/JS/task1/task-1.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="wrap">
+    <div id="wrap">
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
@@ -20,8 +20,8 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
-        <button onclick="start()">开始闪</button>
-        <button onclick="stop()">结束闪</button>
+        <button id="start">开始闪</button>
+        <button id="stop">结束闪</button>
     </div>
 
     <script type="text/javascript" src="./JS/task-1.js"></script>
