--- a/JS/task2/task-2-1.html
+++ b/JS/task2/task-2-1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./sass/task-2-1.css" rel="stylesheet" type="text/css">
+    <link href="./Sass/task-2-1.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 
