--- a/JS/task2/task-2-2.html
+++ b/JS/task2/task-2-2.html
@@ -26,12 +26,12 @@
         <div class="role">
             <div class="role-logo">
                 <img src="./img/photo-1.png">
-                <span>幽灵&nbsp;<input type="text" readonly="readonly"   maxlength="2" placeholder="2" id="specter" class="recompose" onchange="ts(value);">&nbsp;人</span>
+                <span>幽灵&nbsp;<input type="text" readonly="readonly"   maxlength="2" placeholder="2" id="specter" class="recompose">&nbsp;人</span>
             </div>
 
             <div class="role-logo">
                 <img src="./img/photo-2.png">
-                <span>水民&nbsp;<input type="text" readonly="readonly"  maxlength="2" placeholder="6" id="civilian" class="recompose" onchange="ts(value);">&nbsp;人</span>
+                <span>水民&nbsp;<input type="text" readonly="readonly"  maxlength="2" placeholder="6" id="civilian" class="recompose">&nbsp;人</span>
             </div>
         </div>
 
@@ -52,14 +52,14 @@
         <div class="amount">
             <div class="number">
                 <label for="player">请输入玩家数量</label>
-                <input type="text" maxlength="2" placeholder="8" class="game"  id="player" onchange="tr(value);">
+                <input type="text" maxlength="2" placeholder="8" class="game"  id="player" oninput="tr(value);">
                 <label for="player" class="player-color">玩家数量为4—18</label>
 
 
                 <div class="progress-bar">
-                    <button class="dd" id="subtract">-</button>
-                    <input type="range"  min="4" max="18" class="sliding-1"  id="sliding" onchange="tr(value);" >
-                    <button class="dda" id="add" >+</button>
+                    <button class="dd" id="subtract" >-</button>
+                    <input type="range"  min="4" max="18" class="sliding-1"  id="sliding" oninput="tr(value);" >
+                    <button class="dda" id="add" onchange="tr(value);">+</button>
                 </div>
             </div>
 
@@ -71,6 +71,6 @@
 
     </div>
     <script src="./JS/jquery-3.4.1.slim.js"></script>
-<script type="text/javascript" src="./JS/task-2-3.js"></script>
+<script type="text/javascript" src="./JS/task-2-2.js"></script>
 </body>
 </html>
