--- a/JS/task3/task-2-2.html
+++ b/JS/task3/task-2-2.html
@@ -52,14 +52,14 @@
         <div class="amount">
             <div class="number">
                 <label for="player">请输入玩家数量</label>
-                <input type="text" maxlength="2" placeholder="8" class="game"  id="player" oninput="tr(value);">
+                <input type="text" maxlength="2" placeholder="8" class="game"  id="player">
                 <label for="player" class="player-color">玩家数量为4—18</label>
 
 
                 <div class="progress-bar">
                     <button class="dd" id="subtract" >-</button>
-                    <input type="range"  min="4" max="18" class="sliding-1"  id="sliding" oninput="tr(value);" >
-                    <button class="dda" id="add" onchange="tr(value);">+</button>
+                    <input type="range"  min="4" max="18" class="sliding-1"  id="sliding">
+                    <button class="dda" id="add">+</button>
                 </div>
             </div>
 
