--- a/JS/task3/task-3-2.html
+++ b/JS/task3/task-3-2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./Sass/task-3-1.css" rel="stylesheet" type="text/css">
+    <link href="./Sass/task-3-2.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 
@@ -24,13 +24,26 @@
         </div>
 
         <div class="block">
+
             <div class="photo">
-            <img src="./img/photo-1.png">
+                 <img src="./img/status.png">
            </div>
+          <div class="result">
+            <input type="text" class="name" readonly="readonly" maxlength="2">
+            <p>词组:<input type="text"  class="text" readonly="readonly" maxlength="2"></p>
+          </div>
+          
+          <div class="warn">
+              <p>想办法猜到别人的词，同时还要注意不要暴露自己哦！</p>
+
+          </div>
+
+
+
         </div>
 
         <div class="button">
-        查看<input type="text" placeholder="1" readonly="readonly">号身份
+        隐藏并传递给<input type="text" placeholder="2" readonly="readonly">号
 
         </div>
     </div>
@@ -46,7 +59,7 @@
 
 
     <script src="./JS/jquery-3.4.1.slim.js"></script>
-    <script type="text/javascript" src="./JS/task-3-1.js"></script>
+    <script type="text/javascript" src="./JS/task-3-2.js"></script>
 </body>
 
 </html>
