--- a/JS/task3/task-3-2.html
+++ b/JS/task3/task-3-2.html
@@ -26,11 +26,10 @@
         <div class="block">
 
             <div class="photo">
-                 <img src="./img/status.png">
+                 <img src="./img/status.png" id="logo">
            </div>
           <div class="result">
-            <input type="text" class="name" readonly="readonly" maxlength="2">
-            <p>词组:<input type="text"  class="text" readonly="readonly" maxlength="2"></p>
+            <input type="text" class="name" readonly="readonly" maxlength="2" id="sf">
           </div>
           
           <div class="warn">
@@ -44,7 +43,6 @@
 
         <div class="button">
         隐藏并传递给<input type="text" placeholder="2" readonly="readonly">号
-
         </div>
     </div>
 
