--- a/JS/task3/task-3-1.html
+++ b/JS/task3/task-3-1.html
@@ -20,22 +20,22 @@
 
     <div class="status">
         <div class="number">
-            <input type="text" placeholder="1" readonly="readonly" id="identity1">
+            <input type="text" placeholder="1" readonly="readonly" id="number">
         </div>
 
-        <div class="block">
+        <div class="content">
             <div class="photo">
             <img src="./img/photo-1.png" id="logo">
            </div>
         </div>
 
 
-        <div class="block-1">
+        <div class="contents" id="q1">
             <div class="photo-2">
                  <img src="./img/status.png" id="logo">
            </div>
           <div class="result-1">
-            <input type="text" class="name" readonly="readonly" maxlength="2" id="sf">
+            <input type="text" class="name" readonly="readonly" maxlength="2" id="identity">
           </div>
           <div class="warn">
               <p>想办法猜到别人的词，同时还要注意不要暴露自己哦！</p>
@@ -44,24 +44,15 @@
 
 
         
-        <div class="button"  onclick="tx()">
-        查看<input type="text" placeholder="1" readonly="readonly" id="identity">号身份
+        <div class="button"  onclick="btn()">
+        <input type="text" placeholder="查看1号身份" readonly="readonly" id="examine">
         </div>
 
-        <div class="button-1" onclick="tx()">
-            隐藏并传递给<input type="text" placeholder="2" readonly="readonly">号
+        <div class="buttons" onclick="btn()">
+            <input type="text"  readonly="readonly" id="conceal">
             </div>
 
     </div>
-
-
-
-  
-
-
-
-
-
 
 
     <script src="./JS/jquery-3.4.1.slim.js"></script>
@@ -69,3 +60,5 @@
 </body>
 
 </html>
+
+
