--- a/JS/task3/task.html
+++ b/JS/task3/task.html
@@ -34,6 +34,7 @@
                 <button  class="button" id="buttons1">开始游戏</button>
                 <button  class="button" id="buttons" onclick="examine()">法官日志</button>
                 <button  class="button" id="button">确定</button>
+                <button  class="button" id="butt">确定啊</button>
           
         </div>
 
