--- a/JS/task3/task-4-1.html
+++ b/JS/task3/task-4-1.html
@@ -24,8 +24,8 @@
 
         <div class="result-1">
             <div class="result-2">
-                <p class="a1">1</p>
-                <p class="a2">2</p>
+                <p class="ghost">1</p>
+                <p class="orLM">2</p>
             </div>
         </div>
     </div>
@@ -36,8 +36,8 @@
 
 
         <div class="footer">
-       <input class="button-1" type="button"  value="再来一局" onclick="location.href='https://zhuchunyu1995.github.io/xzy/css/task13/task13-3.html'" >
-       <input class="button-2" type="button"  value="上传并分享" onclick="location.href='https://zhuchunyu1995.github.io/xzy/css/task13/task13-3.html'" >
+       <input class="button-1" type="button"  value="再来一局" onclick="location.href='task-2-1.html'"  >
+       <input class="button-2" type="button"  value="上传并分享">
 
         </div>
 
