--- a/JS/task3/task-3-1.html
+++ b/JS/task3/task-3-1.html
@@ -20,7 +20,7 @@
 
     <div class="status">
         <div class="number">
-            <input type="text" placeholder="1" readonly="readonly" id="number">
+            <span class="numb">1</span>
         </div>
 
         <div class="content">
