--- a/JS/task3/task-3-1.html
+++ b/JS/task3/task-3-1.html
@@ -25,14 +25,14 @@
 
         <div class="content">
             <div class="photo">
-            <img src="./img/photo-1.png" id="logo">
+            <img src="./img/photo-1.png" id="logo" class="logos">
            </div>
         </div>
 
 
         <div class="contents" id="q1">
             <div class="photo-2">
-                 <img src="./img/status.png" id="logo">
+                 <img src="./img/status.png" id="logo" class="logos">
            </div>
           <div class="result-1">
             <input type="text" class="name" readonly="readonly" maxlength="2" id="identity">
