--- a/JS/task3/task-2-2.html
+++ b/JS/task3/task-2-2.html
@@ -13,7 +13,7 @@
     <div class="wrap">
         <div class="hot"></div>
         <div class="header">
-            <img src="./img/arrows.png">
+            <img src="./img/arrows.png" class="ans">
         </div>
 
 
