--- a/JS/task3/task-3-1.html
+++ b/JS/task3/task-3-1.html
@@ -13,9 +13,9 @@
 
     <div class="hot"></div>
     <div class="header">
-        <img src="./img/arrows.png">
+        <img src="./img/arrows.png" class="ans">
         <span>查看身份</span>
-        <img src="./img/no.png">
+        <img src="./img/no.png" class="ank">
     </div>
 
     <div class="status">
