--- a/JS/task3/task-4-1.html
+++ b/JS/task3/task-4-1.html
@@ -12,9 +12,9 @@
 <body>
     <div class="box-top">
         <div class="header">
-            <img src="./img/home.png">
+            <img src="./img/home.png" class="ans">
             <span>游戏结果</span>
-            <img src="./img/prompt.png">
+            <img src="./img/prompt.png" class="ank">
         </div>
         <div class="result">
             <p class="end"></p>
@@ -24,11 +24,17 @@
 
         <div class="result-1">
             <div class="result-2">
-                <p class="ghost">1</p>
-                <p class="orLM">2</p>
+                <span class="ghost">1</span>
+                <span class="orLM">2</span>
+            </div>
+            <div class="result-2">
+                <span class="residue">1</span>
+                <span class="residue1">2</span>
             </div>
         </div>
     </div>
+
+
     <div class="coat">
 
 
