--- a/JS/task3/task.html
+++ b/JS/task3/task.html
@@ -15,9 +15,9 @@
 
     <div class="hot"></div>
     <div class="header">
-        <img src="./img/arrows.png">
+        <img src="./img/arrows.png" class="ans">
         <span id="text" class="texts">法官日志</span>
-        <img src="./img/no.png">
+        <img src="./img/no.png" class="ank">
     </div>
 
         <div class="block" id="boxes">
