--- a/JS/task3/task-2-1.html
+++ b/JS/task3/task-2-1.html
@@ -77,12 +77,12 @@
                     <span>有1133个用户正在玩此款游戏</span>
 
                     <div class="box-4">
-                        <div class="block-4" >猜词版</div>
+                        <div class="block-4 ans" >猜词版</div>
                         <img src="./img/arrow.png">
                     </div>
                     <span>有1133个用户正在玩此款游戏</span>
 
-                    <button>白痴版</button>
+                    <button class="ans">白痴版</button>
                     <span>有1133个用户正在玩此款游戏</span>
                 </div>
 
