--- a/css/xkt/JS中基本类型和引用类型分别指的的是什么？有何区别？.html
+++ b/css/xkt/JS中基本类型和引用类型分别指的的是什么？有何区别？.html
@@ -106,8 +106,7 @@ NaN不等于任何 甚至不等于另一个NaN<br>
     <p style="text-align: left">
         空
          类型只有一个值null。表示尚未存在的对象，常用来表示函数企图返回一个不存在的对象。
-         在 JS 中 null 表示 "什么都没有"。
-         null是一个只有一个值的特殊类型。表示一个空对象引用。
+         在 JS 中表示"什么都没有",是只有一个值的特殊类型。
         <br><br>
 
         未定义
@@ -175,7 +174,7 @@ NaN不等于任何 甚至不等于另一个NaN<br>
 }
 调用one()<br><br>
 函数放在数组中<br> var one=[]; <br>one[0]=function() {<br>//函数执行代码} 调用one[0]()<br><br>
-函数在事件调用时不要写括号，比如one(),要这么写one
+函数在事件调用时不要写括号，比如one(),写成one
 
 
 </section>
@@ -205,19 +204,12 @@ one(实参1,实参2);//调用时传参<br>
                 <p>引用类型与基本类型的区别</p>
         </section>
         <section style="font-size: 24px;text-align: left;">
-        引用类型是存放在堆内存中的对象，变量是保存的在栈内存中的一个指针（保存的是堆内存中的引用地址），这个指针指向堆内存。
-        引用类型数据在栈内存中保存的实际上是对象在堆内存中的引用地址。通过这个引用地址可以快速查找到保存中堆内存中的对象
-        栈内存主要用于存储各种基本类型的变量，包括Boolean、Number、String、Undefined、Null，以及对象变量的指针，这时候栈内存给人的感觉就像一个线性排列的空间，每个小单元大小基本相等。
-        而堆内存主要负责像对象Object这种变量类型的存储
+        引用类型是存放在堆内存中的对象，变量是保存的在栈内存中的一个指针，这个指针指向堆内存。
+        通过这个指针可以查找到保存在堆内存中的对象。
+        栈内存主要用于存储各种基本数据类型以及对象变量的指针，
+        而堆内存主要负责对象Object这种变量类型的存储。
         </section>
       
-
-        <section style="font-size: 24px;text-align: left;">
-         <p>栈内存中的变量一般都是已知大小或者有范围上限的，算作一种简单存储。
-         而堆内存主要负责像对象Object这种变量类型的存储，堆内存存储的对象类型数据对于大小这方面，一般都是未知的。</p>
-        </section>
-
-
 
 
         <section style="font-size: 24px;text-align: left;">
@@ -289,7 +281,7 @@ one(实参1,实参2);//调用时传参<br>
     4、参数传递的不同（把实参复制给形参的过程）<br>
     原始值：只是把变量里的值传递给参数，之后参数和这个变量互不影响。<br>
     引用值：对象变量它里面的值是这个对象在堆内存中的内存地址，这一点要时刻铭记在心！<br>
-    因此它传递的值也就是这个内存地址，这也就是为什么函数内部对这个参数的修改会体现在外部的原因了，因为它们都指向同一个对象。<br>
+    因此它传递的值也就是这个内存地址。<br>
             </section>
 
 
