--- a/items/db.html
+++ b/items/db.html
@@ -200,7 +200,7 @@
 
 
     <!-- 豆瓣时间 -->
-    <div class="bc">
+    <div class="bc clearfix">
         <div class="time common-container clearfix">
             <div class="aside-left">
                 <h2 class="title"><a href="" class="dark-color">豆瓣时间</a> </h2>
@@ -423,7 +423,7 @@
     </div>
 
     <!-- 小组 -->
-    <div class="bc">
+    <div class="bc clearfix">
         <div class="group common-container clearfix">
             <div class="aside-left">
                 <div class="title ">
@@ -900,7 +900,7 @@
     </div>
 
     <!-- 音乐 -->
-    <div class="bc">
+    <div class="bc clearfix">
         <div class="music common-container clearfix">
 
             <div class="aside-left">
@@ -1265,7 +1265,7 @@
     </div>
 
     <!-- 同城 -->
-    <div class="bc">
+    <div class="bc clearfix">
         <div class="city-wide common-container clearfix">
 
             <div class="aside-left">
