--- a/index/index.html
+++ b/index/index.html
@@ -12,6 +12,8 @@
     <div id="game">
 
     </div>
+    <button id="begin">重新随机</button>
+    <button id="recover">恢复</button>
     <script src="index.js"></script>
 </body>
 
